Thêm quản lí tài khoản và fix lỗi in bài kiểm tra

--- a/Angular_Client/package.json
+++ b/Angular_Client/package.json
@@ -40,6 +40,7 @@
     "clipboard": "^2.0.6",
     "highlight.js": "^10.4.0",
     "highlightjs-line-numbers.js": "^2.8.0",
+    "jspdf": "^2.4.0",
     "moment": "^2.27.0",
     "ng-apexcharts": "^1.5.1",
     "ng-inline-svg": "^10.1.0",
@@ -49,6 +50,7 @@
     "ngx-mat-select-search": "^3.1.2",
     "ngx-perfect-scrollbar": "^9.0.0",
     "ngx-permissions": "^8.1.1",
+    "ngx-print": "^1.2.1",
     "ngx-smart-popover": "^1.4.0",
     "object-path": "^0.11.4",
     "perfect-scrollbar": "^1.5.0",
