--- a/APICore_SoanDeThi/APICore_SoanDeThi.csproj
+++ b/APICore_SoanDeThi/APICore_SoanDeThi.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\assets\account-images\z2981264957037_6083c53d0de2daca91257b7594abf128.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.13.1" />
     <PackageReference Include="DocX" Version="1.8.0" />
     <PackageReference Include="Mammoth" Version="1.4.0" />
@@ -37,6 +41,10 @@
 
   <ItemGroup>
     <Folder Include="DuLieu\AccountImage\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\assets\account-images\z2981264957037_6083c53d0de2daca91257b7594abf128.jpg" />
   </ItemGroup>
 
 </Project>
