Cập nhật chức năng thêm mới tài khoản học sinh

--- a/APICore_SoanDeThi/APICore_SoanDeThi.csproj
+++ b/APICore_SoanDeThi/APICore_SoanDeThi.csproj
@@ -41,6 +41,7 @@
 
   <ItemGroup>
     <Folder Include="DuLieu\AccountImage\" />
+    <Folder Include="DuLieu\Templates\" />
   </ItemGroup>
 
   <ItemGroup>
