--- a/APICore_SoanDeThi/APICore_SoanDeThi.csproj
+++ b/APICore_SoanDeThi/APICore_SoanDeThi.csproj
@@ -9,8 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DocumentFormat.OpenXml" Version="2.13.1" />
+    <PackageReference Include="DocumentFormat.OpenXml" Version="2.9.1" />
     <PackageReference Include="DocX" Version="1.8.0" />
+    <PackageReference Include="EPPlus" Version="4.5.3.2" />
     <PackageReference Include="Mammoth" Version="1.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
